# evolib

./: .gitignore  README.md  pyproject.toml  tmp.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/evolib/: engine.py
src/evolib/core/: distance.py  genotype.py  individual.py  termination.py
src/evolib/operators/: __init__.py  crossover.py  mutation.py  replacement.py  selection.py
tests/integration/: OneMax.py
tests/unit/: test_engine.py
tests/unit/core/: test_distance.py  test_genotype.py  test_individual.py  test_termination.py
tests/unit/operators/: test_crossover.py  test_mutation.py  test_replacement.py  test_selection.py
